# Copyright 2019 by Jiuguang Wang (www.robo.guru)
# All rights reserved.
# This file is part of Agenoria and is released under the MIT License.
# Please see the LICENSE file that should have been included as part of
# this package.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
authors = [
  {name = "Jiuguang Wang", email = "jw@robo.guru"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "tomli>=2.0.1",
  "matplotlib>=3.8",
  "pandas>=2.1.0",
  "seaborn>=0.12.2",
  "numpy>=1.25.2",
  "chart_studio>=1.1.0",
  "toml>=0.10.2"
]
description = "Python utility for visualizing growth data from a newborn's first year."
keywords = ["baby", "visualization", "glow", "pandas", "matplotlib"]
license = {file = "LICENSE"}
name = "agenoria"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5.0",
  "pytest>=7.4.2",
  "pytest-cov>=4.1.0",
  "MonkeyType>=23.3.0"
]

[project.scripts]
agenoria = "agenoria.__main__:main"

[project.urls]
documentation = "https://github.com/jiuguangw/Agenoria"
homepage = "https://github.com/jiuguangw/Agenoria"
repository = "https://github.com/jiuguangw/Agenoria"

[tool.black]
# `extend-exclude` is not honored when `black` is passed a file path explicitly,
# as is typical when `black` is invoked via `pre-commit`.
force-exclude = '''
/(
  build/.*
)/
'''
include = '\.pyi?$'
line-length = 79
preview = true
target-version = ['py310']

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.10"
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true

[tool.ruff]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
ignore = ["D", "PLR2004", "T201", "S101"]
# Same as Black.
line-length = 79
select = ["ALL"]
# Assume Python 3.10.
target-version = "py310"
unfixable = []

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools]
packages = ["agenoria", "config", "data"]
