# Copyright 2019 by Jiuguang Wang (www.robo.guru)
# All rights reserved.
# This file is part of Agenoria and is released under the MIT License.
# Please see the LICENSE file that should have been included as part of
# this package.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[project]
authors = [
  {name = "Jiuguang Wang", email = "jw@robo.guru"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "matplotlib>=3.10",
  "numpy>=2.2",
  "pandas>=2.3",
  "seaborn>=0.13.2",
  "chart_studio>=1.1.0",
  "tomli>=2.0.1; python_version < \"3.11\""
]
description = "Python utility for visualizing growth data from a newborn's first year."
keywords = ["baby", "visualization", "glow", "pandas", "matplotlib"]
license = {file = "LICENSE"}
name = "agenoria"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.1",
  "MonkeyType>=23.3.0"
]

[project.scripts]
agenoria = "agenoria.__main__:main"

[project.urls]
documentation = "https://github.com/jiuguangw/Agenoria"
homepage = "https://github.com/jiuguangw/Agenoria"
repository = "https://github.com/jiuguangw/Agenoria"

[tool.pixi.workspace]
name = "agenoria"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.11"

[tool.pixi.pypi-dependencies]
agenoria = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.tasks]
lint = "pre-commit run --all-files"
test = "pytest -q"
test-cov = "pytest -n auto --cov=./ --cov-report=xml -q"
plot = "agenoria config/config_zyw.toml"
plot-zlw = "agenoria config/config_zlw.toml"
plot-all = { depends-on = ["plot", "plot-zlw"] }

[tool.black]
line-length = 120
preview = true
target-version = ['py310']

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.10"
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true

[tool.ruff]
line-length = 120
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "SLF001",
    "RET501",
    "RET502",
    "RET503",
    "RUF",
    "PLC",
    "PLE",
    "PLW",
    "PIE",
    "FLY",
]

ignore = [
    "E731",
    "PLC0105",
    "PLW0603",
    "PLW2901",
    "RUF010",
    "B035",
    "RUF012",
    "PLC2401",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["agenoria", "config"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
packages = ["agenoria", "config", "data"]
